tests/snapshots/ngl_all__ngl_tc_old_babbitt_guitar_piece.snap
---
source: tests/ngl_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 29
Beam: 96
BeginPage: 3
EndPage: 3
LedgerLine: 186
MusicChar: 499
NoteStem: 195
SetMusicSize: 13
SetWidths: 1
Slur: 28
Staff: 13
TextString: 44
TOTAL: 1110

=== STAVES ===
y=76.0 x=[96.0..558.0] lines=5 spacing=5.00
y=192.5 x=[54.0..558.0] lines=5 spacing=5.00
y=309.0 x=[54.0..558.0] lines=5 spacing=5.00
y=425.5 x=[54.0..558.0] lines=5 spacing=5.00
y=542.0 x=[54.0..558.0] lines=5 spacing=5.00
y=658.5 x=[54.0..558.0] lines=5 spacing=5.00
y=76.0 x=[54.0..558.0] lines=5 spacing=5.00
y=192.5 x=[54.0..558.0] lines=5 spacing=5.00
y=309.0 x=[54.0..558.0] lines=5 spacing=5.00
y=425.5 x=[54.0..558.0] lines=5 spacing=5.00
y=542.0 x=[54.0..558.0] lines=5 spacing=5.00
y=658.5 x=[54.0..558.0] lines=5 spacing=5.00
y=76.0 x=[54.0..558.0] lines=5 spacing=5.00

=== BARLINES: 29 total ===

=== BEAMS: 96 total ===

=== STEMS: 195 total ===

=== SLURS: 28 total ===

=== GLYPHS ===
Smufl(57424): 13
Smufl(57474): 9
Smufl(57475): 10
Smufl(57476): 21
Smufl(57507): 8
Smufl(57508): 202
Smufl(57831): 19
Smufl(57920): 5
Smufl(57921): 7
Smufl(57922): 1
Smufl(57923): 4
Smufl(57952): 71
Smufl(57953): 3
Smufl(57954): 26
Smufl(58530): 1
Smufl(58531): 17
Smufl(58597): 3
Smufl(58598): 11
Smufl(58599): 21
Smufl(58600): 5
Smufl(59520): 1
Smufl(59521): 5
Smufl(59523): 16
Smufl(59525): 14
Smufl(59526): 2
Smufl(59527): 4
